...
    override func viewDidLoad() {
        super.viewDidLoad()
        
        let setting1 = Settings(title: "Team Information", answer: "", image: false)
        let setting2 = Settings(title: "Managers", answer: "", image: false)
        let setting3 = Settings(title: "Season Settings", answer: "123456", image: false)
        let setting4 = Settings(title: "Sign Out", answer: "", image: true)

        settingsList.append(setting1)
        settingsList.append(setting2)
        settingsList.append(setting3)
        settingsList.append(setting4)
        
...
